# suseok-trader-v2

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
apps/: core_api.py  kiwoom_gateway.py  mock_gateway.py
docs/: ai_candidate_scorer_advisory_ko.md  ai_codex_prompt_generator.md  ai_context_builder.md  ai_openai_client.md  ai_rca_workflows.md  ai_sidecar_architecture.md  ai_sidecar_safety_policy.md  architecture.md  architecture_review_2026-07.md  candidate_fsm.md  condition_profile_pack_ko.md  condition_profiles_market_open_ko.md  dashboard_ai_explanation_cards.md  dashboard_v1.md  entry_timing_order_plan_ko.md  event_contract.md  exit_engine_dry_run.md  external_llm_adapter_ko.md  fast1_pure_live_sim_preview_ko.md  fast2a_point_in_time_alpha_replay_ko.md  fast2b_conservative_profit_lab_ko.md  fast3_parallel_shadow_ko.md  fast4_broker_snapshot_reconcile_ko.md  fast5_guarded_automatic_canary_ko.md  fast6_champion_challenger_ko.md  fast_track_live_sim_roadmap_2026-07_ko.md  gateway_transport.md  glossary_ko.md  kiwoom_gateway_adapter.md  kiwoom_gateway_callback_rca.md  live_sim_enablement.md  live_sim_execution_lifecycle_ko.md  live_sim_operating_orchestrator_ko.md  live_sim_pilot_pipeline_ko.md  live_sim_pilot_roadmap_ko.md  live_sim_review_sidecar.md  market_data_service.md  market_open_runtime_gap_report.md  market_open_stepwise_gap_report.md  market_scan_service_ko.md  (+64 more)
domain/: __init__.py
gateway/: __init__.py  command_handlers.py  condition_admission.py  core_client.py  core_io_worker.py  event_factory.py  kiwoom_broker_snapshot.py  (+9 more)
(+618 files in other folders)
