[project]
name = "suseok-trader-v2"
version = "0.1.0"
description = "Bootstrap skeleton for a broker-neutral Kiwoom OpenAPI+ trading system."
requires-python = ">=3.11"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["api", "apps", "domain", "gateway", "infrastructure", "services", "storage", "tests", "tools"]

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
files = ["api/dependencies/auth.py", "apps/core_api.py", "services/config.py"]
ignore_missing_imports = true
follow_imports = "silent"
show_error_codes = true
warn_unused_configs = true
